# trilobot-voice

./: LICENSE  README.md
voice-control/: README.md  main.py  pyproject.toml
voice-control/src/agents/: trilobot.py
voice-control/src/lights/: trilobot_lighting.py
voice-control/src/movement/: trilobot_movement.py
